jswt-semantics/src/snapshots/jswt_semantics__resolver__test__duplicate_variable_declaration_generates_error.snap
---
source: jswt-semantics/src/resolver.rs
expression: resolver.errors

---
[
    VariableAlreadyDefined {
        name: "x",
        span: Span {
            file: "test.1",
            module: "module/test.1",
            start: 15,
            end: 16,
        },
    },
]
