jswt-semantics/src/snapshots/jswt_semantics__resolver__test__variable_not_defined_generates_error.snap
---
source: jswt-semantics/src/resolver.rs
expression: resolver.errors

---
[
    VariableNotDefined {
        name: "x",
        span: Span {
            file: "test.1",
            module: "module/test.1",
            start: 25,
            end: 26,
        },
    },
]
